# dk_perception

./: .gitignore  CMakeLists.txt  Config.cmake.in  Dockerfile  compose.yaml
.devcontainer/: devcontainer.json
example/: CMakeLists.txt  deeplsd_example.cpp  demo.cpp  ortho_projection.cpp  pointcloud_splitlines_example.cpp  radial_extremum_detect_example.cpp  radial_splitter_example.cpp  rerun_publishers.hpp  tsdf_reconstruction_example.cpp  tsdf_reconstruction_on_box_example.cpp
modules/common/: CMakeLists.txt
modules/common/include/dk_perception/common/: macros.hpp
modules/detection/: CMakeLists.txt
modules/detection/include/dk_perception/detection/d2/: node_extractor.hpp  triangle_constructor.hpp  triangle_detection.hpp
modules/detection/include/dk_perception/detection/d3/: bin_detection.hpp  marker_target_detection.hpp  radial_extremum_detector.hpp  rectangle_detection.hpp
modules/detection/include/dk_perception/detection/pose3d/: bin_detection.hpp
modules/detection/src/d2/: node_extractor.cpp  triangle_constructor.cpp
modules/detection/src/d3/: bin_detection.cpp  marker_target_detection.cpp  radial_extremum_detector.cpp
modules/detection/src/pose3d/: bin_detection.cpp
modules/detection/test/: CMakeLists.txt  test_exclude_invalid_triangles.cpp
modules/dnn/: CMakeLists.txt
modules/dnn/include/dk_perception/dnn/: common.hpp  deep_lsd.hpp  superpoint.hpp
modules/dnn/src/: deep_lsd.cpp  superpoint.cpp
modules/geometry/: CMakeLists.txt
modules/geometry/include/dk_perception/: geometry.hpp
modules/geometry/include/dk_perception/geometry/: bounding_box_2d.hpp  bounding_box_3d.hpp  intersection.hpp  line.hpp  triangle.hpp  triangle_constructor.hpp  triangle_mesh.hpp
modules/geometry/src/: bounding_box_2d.cpp  bounding_box_3d.cpp  triangle.cpp
modules/geometry/test/: CMakeLists.txt  test_line.cpp  test_triangle_constructor.cpp
modules/image_processing/: CMakeLists.txt
modules/image_processing/include/dk_perception/image_processing/: percepective_to_ortho.hpp
modules/image_processing/src/: percepective_to_ortho.cpp
modules/optimization/: CMakeLists.txt
modules/optimization/include/dk_perception/optimization/: placement_pose_esdf_based_optimizer.hpp  rectangle_2d_fitting.hpp
modules/optimization/src/: placement_pose_esdf_based_optimizer.cpp  rectangle_2d_fitting.cpp
modules/pcproc/: CMakeLists.txt
modules/pcproc/include/dk_perception/pcproc/: project_xz_plane.hpp  radial_splitter.hpp  scanline_splitter.hpp  search_min_point.hpp
modules/pointcloud_processing/: CMakeLists.txt
modules/pointcloud_processing/include/dk_perception/pointcloud_processing/: scanline_splitter.hpp
modules/reconstruction/: CMakeLists.txt
modules/reconstruction/include/dk_perception/reconstruction/: reconstruction.hpp  voxblox_pcl_conversion.hpp
modules/reconstruction/src/: reconstruction.cpp  voxblox_pcl_conversion.cpp
modules/rerun/: CMakeLists.txt
modules/rerun/include/dk_perception/rerun/: publish_data.hpp
modules/rerun/src/: publish_data.cpp
modules/type/: CMakeLists.txt
modules/type/include/dk_perception/type/: polygons.hpp
modules/type/include/dk_perception/type/pointcloud/: iteratable_colorized_pointcloud_accessor.hpp  point_traits.hpp  rgbd_type.hpp
sample/: esdf_sample01.rrd
